--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ p {
 .serach-container input {
   width: 500px;
   padding: 10px;
-  border: 2px solid #EEE;
+  border: 2px solid #607d8b;
   outline: none;
   border-radius: 6px;
 }
@@ -47,6 +47,7 @@ p {
     margin-bottom: 10px;
     margin-left: auto;
     margin-right: auto;
+    width: 90%;
   }
 }
 .serach-container input:focus {
@@ -68,6 +69,11 @@ button ,
   margin-left: 25px;
 }
 
+@media(max-width: 675px) {
+  .serach-container button {
+    margin:0;
+  }
+}
 #delete-button {
   display: block;
   background-color: red;
