--- a/style.css
+++ b/style.css
@@ -1,13 +1,48 @@
 * {
   box-sizing: border-box;
 }
+
 :root {
   --main-color: #009688;
 }
+html {
+  scroll-behavior: smooth;
+}
+
+ul {
+  list-style: none;
+}
+.container {
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+/* small */
+@media (min-width: 768px) {
+  .container {
+      width: 750px;
+  }
+}
+/* medium */
+@media (min-width: 992px) {
+  .container {
+      width: 970px;
+  }
+}
+/* large */
+@media (min-width: 1200px) {
+  .ocntainer {
+      width: 1170px
+  }
+}
+/* End Global Rules */
 body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   text-align: center;
+  /* background-color: rgba(var(--main-color) , 90%); */
+  background-color: rgb(0 150 136 / 10%);
 }
 h1 {
   text-transform: capitalize;
@@ -76,7 +111,7 @@ button ,
 }
 #delete-button {
   display: block;
-  background-color: red;
+  background-color: #f44336;
   margin: 10px auto;
 }
 
@@ -87,20 +122,20 @@ button ,
   margin-bottom: 100px;
 }
 
-
-
-
 .results {
   display: grid;
   grid-template-columns: repeat(auto-fill , minmax(250px , 1fr));
   gap: 2vw;
-  background-color: #ddd;
+  background-color: var(--main-color);
   padding: 2vw;
   align-items: stretch;
+  border-radius: 6px;
 }
 .results .image-box {
   background-color: white;
   padding: 20px;
+  border-radius: inherit;
+  box-shadow: 0px 4px 10px 0px #666;
 }
 .results .image-box h4 {
   margin: 0 auto 20px;
@@ -109,13 +144,25 @@ button ,
 .results .image-box .image {
   width: 100%;
   height: 200px;
+  border-radius: inherit;
+  margin-bottom: 20px;
+  border-bottom: 2px solid var(--main-color);
+  position: relative;
 }
-
+.results .image-box .image::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background: #009688;
+  bottom: -20px;
+  left: 0;
+}
 .results .image-box .image img {
   width: 100%;
   max-width: 100%;
   height: 200px;
-
+  border-radius: inherit;
 }
 
 .results .image-box .size {
@@ -136,14 +183,14 @@ button ,
 
 button#up {
   position: fixed;
-  bottom: 20px;
-  right: 20px;
-  padding: 4px 6px;
-  text-align: center;
-  text-transform: capitalize;
-  font-size: 1.2rem;
-  border-radius: 6px;
-  cursor: pointer;
-  display: none;
-  transform: .5s;
+    bottom: 20px;
+    right: 20px;
+    padding: 4px 6px;
+    text-align: center;
+    text-transform: capitalize;
+    font-size: 1.2rem;
+    border-radius: 6px;
+    cursor: pointer;
+    display: none;
+    transform: .5s;
 }
